Fix swatches appearance and qty selector alignment

--- a/src/components/addtocart/addtocart.scss
+++ b/src/components/addtocart/addtocart.scss
@@ -6,7 +6,6 @@
 $addtocart_button-type: 'primary' !default;
 $addtocart_button-icon-position: 'right' !default;
 
-$addtocart_button-remove-border: true !default;
 $addtocart_button-icon-width: 2.2rem !default;
 $addtocart_button-icon-height: $addtocart_button-icon-width !default;
 $addtocart_button-icon-edge-gutter: 0.8em !default;
@@ -33,10 +32,6 @@ $addtocart_ajax-fail-bg-secondary: $color_error-600 !default;
             $type: $addtocart_button-type,
             $icon_pos: $addtocart_button-icon-position
         );
-
-        @if $addtocart_button-remove-border {
-            border: none !important;
-        }
 
         &[disabled] {
             opacity: 1;
